# hack4nf-2022

./: .gitignore  README.md
challenge-1/: LICENSE  README.md  config.ini.template  requirements.txt  setup.cfg
challenge-1/nextgenlp/: config.py  embedders.py  genie.py  genie_constants.py  synapse.py
challenge-1/notebooks/: 01_genie_explore.ipynb  20_genie_pmi_vectors.ipynb  genie_explore.ipynb  genie_pmi_vectors.ipynb  nlp_gene_games_v0.ipynb  scratch.ipynb  xml_geneNames.ipynb
challenge-1/scripts/: make_baseline_nlp_models.py  make_embeddings_v0.py  print_gene_panel_coverage.py
challenge-3/: .gitignore  config.ini.template
challenge-3/galtay/: README.md  app.bak.py  app.py  calculate_ratios.ipynb  check_hill_fits.ipynb  config.py  hts.py  parse_drugbank.py  requirements.txt  sas_config.toml  sas_config_template.toml  single_agent_screens.py  syn5522627.py  synapse.py
challenge-3/hari/: parse_drugbank.py
galtay-sandbox/: .gitignore  README.md  requirements.txt  setup.cfg
galtay-sandbox/data/nci-ras-initiative/: ras-pathway-gene-names.xlsx
galtay-sandbox/embeddings/: dme_gene_meta.tsv  dme_gene_ppmi_vecs.tsv.REMOVED.git-id  projector_config.json
galtay-sandbox/hack4nf/: embedders.py  genie.py  genie_reader.py  genie_utils.py  reactome.py  synapse.py
galtay-sandbox/notebooks/: genie_etl.ipynb  genie_explore.ipynb  genie_open_cravat.ipynb  genie_pmi_gene_cna_vectors.ipynb  genie_pmi_vectors.ipynb  nlp_gene_games_v1.ipynb  pmi_svd_gene_cna_meta.tsv  pmi_svd_gene_cna_vecs.tsv  projector_config.json  scratch.ipynb  secrets.json.template
(+15 files in other folders)
