[metadata]
name = hack4nf
version = attr: hack4nf.__version__

[options]
packages = find:
include_package_data = True
python_requires = >=3.7,<3.11
install_requires =
  black
  civicpy
  cnvkit
  ipython
  jupyter
  loguru
  matplotlib
  numpy
  openpyxl
  pandas
  plotly
  pyarrow
  reactome2py
  seaborn==0.11.2
  synapseclient
  tqdm
